# libmicrofido2

./: .gitmodules  CITATION.cff  CMakeLists.txt  DEVELOPMENT.md  LICENSE  Makefile  README.md  avr.toolchain  esp.toolchain
cmake/: linker-map.cmake
examples/: CMakeLists.txt  README.md  aes_gcm_example.c  example_baumann_et_al.c  invalid_device.c  nfc.c  nfc_simulator.c  simulator.c  stateless_rp.c  stateless_rp.h
examples/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32/components/clock/: CMakeLists.txt  clock_cycles.c  clock_cycles.h
examples/esp32/components/hw_crypto/: CMakeLists.txt  Kconfig.projbuild  hw_crypto.c
examples/esp32/components/libmicrofido2/: CMakeLists.txt
examples/esp32/main/: CMakeLists.txt  esp32-libmicrofido2.c  nfc_sim  stateless_rp
examples/measurements/: CMakeLists.txt  README.md  aes_gcm_measure.c  ed25519_measure.c  gpio.c  inflate_measure.c  sha256_measure.c  sha512_measure.c
examples/measurements/atmega/: CMakeLists.txt  gpio.c  hw_crypto.c
examples/measurements/common/: aes_gcm_measure.c  ed25519_measure.c  gpio.c  gpio.h  inflate_measure.c  sha256_measure.c  sha512_measure.c
examples/measurements/esp32/: CMakeLists.txt  sdkconfig.defaults
examples/measurements/esp32/components/: clock  hw_crypto
examples/measurements/esp32/main/: CMakeLists.txt  Kconfig.projbuild  gpio.c
examples/measurements/nrf52/: CMakeLists.txt  clock  hw_crypto  prj.conf
examples/measurements/nrf52/gpio/: gpio.c
examples/measurements/scripts/: gen_aes_gcm.py  gen_ed25519.py  gen_inflate.py  gen_sha256.py  gen_sha512.py
examples/nrf52/: CMakeLists.txt  Dockerfile  README.md  prj.conf  stateless_rp
examples/nrf52/hw_crypto/: hw_crypto.c  hw_crypto.h
examples/nrf52/src/: clock_cycles.c  clock_cycles.h  hw_crypto.c  main.c
examples/stateless_rp/: stateless_rp.c  stateless_rp.h  stateless_rp_nfc_simulator.c  stateless_rp_nfc_simulator.h
include/: array.h  assertion.h  cbor.h  crypto.h  dev.h  error.h  fido.h  info.h  internal.h  io.h  iso7816.h  largeblob.h  log.h  nfc.h  param.h  random.h  types.h  utils.h
platform/esp32/: sdkconfig  sdkconfig.h
src/: assertion.c  buf.c  cbor.c  crypto.c  dev.c  info.c  io.c  iso7816.c  largeblob.c  nfc.c  random.c
